Kubernetes_vanilla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kernel-dev
  template:
    metadata:
      labels:
        app: kernel-dev
    spec:
      nodeName: buildhost
      containers:
        - name: kernel-dev
          image: 192.168.178.43:5000/ubuntu_kernel_dev:latest
          command: ["sh", "-c", "while true; do BODY=\"The Kubernetes pod with 2 another replicas for the cross compiling of A-EON PowerPC Linux kernels works!\n\n$(uname -a)\n\n$(free -m)\n\n$(lscpu | grep Model)\n\n$(LC_ALL=C mpstat -P ALL 1 1 | awk '$0 !~ /Average/ && $0 ~ /[0-9]+/ && $NF ~ /^[0-9.]+$/ { cpu=$(NF-10); if (cpu ~ /^[0-9]+$/) printf \"CPU%s: %.1f%%\\n\", cpu, 100-$NF }')\"; { printf \"HTTP/1.1 200 OK\\r\\nContent-Type: text/plain\\r\\nContent-Length: %s\\r\\nConnection: close\\r [...]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kernel-dev-volume
              mountPath: /kernel_dev
      volumes:
        - name: kernel-dev-volume
          hostPath:
            path: /kernel_dev
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel-test
  template:
    metadata:
      labels:
        app: kernel-test
    spec:
      nodeName: worker02 
      containers:
        - name: kernel-test
          image: 192.168.178.43:5000/ubuntu_kernel_test:latest
          command: ["sh", "-c", "echo root:$ROOT_PASSWORD | chpasswd && service xrdp start && service ssh start && while true; do BODY=\"The Kubernetes pod for testing the A-EON PowerPC Linux kernels works!\n\n$(uname -a)\n\n$(free -m)\n\n$(lscpu | grep Model)\n\n$(LC_ALL=C mpstat -P ALL 1 1 | awk '$0 !~ /Average/ && $0 ~ /[0-9]+/ && $NF ~ /^[0-9.]+$/ { cpu=$(NF-10); if (cpu ~ /^[0-9]+$/) printf \"CPU%s: %.1f%%\\n\", cpu, 100-$NF }')\"; { printf \"HTTP/1.1 200 OK\\r\\nContent-Type: text/plain\\r [...]
          ports:
            - containerPort: 8080 
            - containerPort: 3389 
          volumeMounts:
            - name: kernels
              mountPath: /kernels
      volumes:
        - name: kernels
          persistentVolumeClaim:
            claimName: nfs-pvc  
---
apiVersion: v1
kind: Service
metadata:
  name: kernel-dev-service
spec:
  type: ClusterIP
  selector:
    app: kernel-dev
  ports:
    - port: 9090 
      targetPort: 8080 
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kernel-test-service
spec:
  type: NodePort 
  selector:
    app: kernel-test
  ports:
    - name: http
      port: 9091 
      targetPort: 8080
      nodePort: 30000
      protocol: TCP
    - name: rdp
      port: 9080 
      targetPort: 3389
      nodePort: 30001 
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kernel-dev-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kernel-dev-service
                port:
                  number: 9090
